See http://netpbm.sourceforge.net/history.html for a general history of
Netpbm.

CHANGE HISTORY 
--------------

not yet  BJH  Release 10.70.00

              Add st4topgm, pgmtost4.

              Add pgmtosbig.  Mainly a test tool for sbigtopgm.

              tifftopnm: allow input file to be nonseekable.
              Thanks Ludolf Holzheid <ludolf.holzheid@gmx.de>.

              Add yuy2topam.  Thanks Michael Haardt.

              pamtilt: fix bug: unconditional crash.  Broken in Netpbm 10.63
              (June 2013).

              pnmgamma -srgbtobt709, -bt709tosrgb: fix bug; incorrect output
              nearly always.  Always broken (These options were new in
              Netpbm 10.32 (February 2006)).

              pamtosvg: fix use of unset variable; probably results in a
              crash.  Always present (pamtosvg was new in Netpbm 10.33 (March
              2006).

              cameratopam: fix bug: variable used before set; unknown impact.
              Introduced in Netpbm 10.66 (March 2014).

              On Windows, don't leave temporary files around (previous code
              did so because unlink of an open file fails in Windows; new
              code deletes temporary files via atexit).  Thanks
              Ludolf Holzheid <ludolf.holzheid@gmx.de>.

              Libnetpbm: fix external header file pm.h so it does not include
              internal header file pm_c_util.h.  Introduced in Netpbm
              10.69 (December 2014).

              build: fix incompatible type compilation error in giftopnm.
              Broken in Netpbm 10.38 (March 2007) (but obviously manifests
              only in recent build environments).

              build: fix compile failure in wordint_access_be.h with Bigendian
              target platforms.  Broken in Netpbm 10.63 (June 2013).

              build: fix compile failure in pbmtomacp, ppmtoacad, pgmabel:
              TRUE redefined.  Introduced in Netpbm 10.69 (December 2014).
